[core] Add ktlint